--- a/App/resources/resources.qrc
+++ b/App/resources/resources.qrc
@@ -5,6 +5,8 @@
     <file>Icons/add_file.png</file>
     <file>Icons/add_file_w.png</file>
     <file>Icons/app_icon.png</file>
+    <file>Icons/app_icon.ico</file>
+    <file>Icons/app_icon2.ico</file>
     <file>Icons/down_arrow.png</file>
     <file>Icons/down_arrow_w.png</file>
     <file>Icons/up_arrow.png</file>
